prd_package/objects/Case_Member__c.object
<CustomObject>
    <fields>
        <fullName>Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Teamid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>relate case team object</description>
        <label>Case Team</label>
        <referenceTo>Case_Team__c</referenceTo>
        <relationshipLabel>Case Members</relationshipLabel>
        <relationshipName>User_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Display department of member</description>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abroad Stations</fullName>
                </value>
                <value>
                    <fullName>Baggage Claim</fullName>
                </value>
                <value>
                    <fullName>Bangkok Ramp Service</fullName>
                </value>
                <value>
                    <fullName>Bangkok Ticket &amp;	Reservation</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Cockpit Crew</fullName>
                </value>
                <value>
                    <fullName>Ground Service at Bangkok Airport</fullName>
                </value>
                <value>
                    <fullName>In-Flight Products</fullName>
                </value>
                <value>
                    <fullName>In-Flight Service</fullName>
                </value>
                <value>
                    <fullName>S3</fullName>
                </value>
                <value>
                    <fullName>S4</fullName>
                </value>
                <value>
                    <fullName>SZ-R</fullName>
                </value>
                <value>
                    <fullName>Technical Service</fullName>
                </value>
                <value>
                    <fullName>Thai Smile Airline</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address for the passenger.</description>
        <label>Email</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Assigned_Time__c</fullName>
        <label>Last Assigned Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Telephone number for the passenger.</description>
        <label>Phone</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Queueid__c</fullName>
        <description>This field use mapping with case owner for point to Case Team</description>
        <formula>Case_Teamid__r.Queue_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queueid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Person__c</fullName>
        <label>Responsible Person</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Status__c</fullName>
        <description>Display round robin status of member</description>
        <formula>IMAGE(CASE( Type__c, 
&quot;Internal User&quot;, &quot;/resource/icon_case/Priority_High.png&quot;, 
&quot;Round Robin User&quot;, IF(Assigned__c == true,&quot;/resource/icon_case/Priority_Low.png&quot;,&quot;/resource/icon_case/Priority_Medium.png&quot;),  
&quot;/resource/icon_case/Priority_High.png&quot;),&quot;&quot;,24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>Display role of member</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Chief</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Booking through TG website</fullName>
                </value>
                <value>
                    <fullName>Ticket Receipt</fullName>
                </value>
                <value>
                    <fullName>BKK Reservation (Thai Contact Center)</fullName>
                </value>
                <value>
                    <fullName>Reservation System Service Management</fullName>
                </value>
                <value>
                    <fullName>Ticketing Dept.</fullName>
                </value>
                <value>
                    <fullName>Tickets issued at Larnluang Office</fullName>
                </value>
                <value>
                    <fullName>Tickets issued at Head office (Vibhavadee)</fullName>
                </value>
                <value>
                    <fullName>Tickets issued at Silom office</fullName>
                </value>
                <value>
                    <fullName>E-Ticketing</fullName>
                </value>
                <value>
                    <fullName>Airport Ticket Office</fullName>
                </value>
                <value>
                    <fullName>Refund office</fullName>
                </value>
                <value>
                    <fullName>Passenger Refund</fullName>
                </value>
                <value>
                    <fullName>Agency Sales</fullName>
                </value>
                <value>
                    <fullName>Airline Industry Relations</fullName>
                </value>
                <value>
                    <fullName>Check-in Landside - International</fullName>
                </value>
                <value>
                    <fullName>Check-in Landside - Domestic</fullName>
                </value>
                <value>
                    <fullName>Departure - Airside</fullName>
                </value>
                <value>
                    <fullName>BKK Station Manager / Duty Manager</fullName>
                </value>
                <value>
                    <fullName>Passenger Service</fullName>
                </value>
                <value>
                    <fullName>Service Delivery Support Dept.</fullName>
                </value>
                <value>
                    <fullName>Baggage Services Dept.</fullName>
                </value>
                <value>
                    <fullName>BKK Lounges</fullName>
                </value>
                <value>
                    <fullName>Lounges at abroad</fullName>
                </value>
                <value>
                    <fullName>Stations</fullName>
                </value>
                <value>
                    <fullName>Load Control</fullName>
                </value>
                <value>
                    <fullName>Ground Support Equipment Operations Control Dept.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Display type of member</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External User</fullName>
                </value>
                <value>
                    <fullName>Internal User</fullName>
                </value>
                <value>
                    <fullName>Investigation Staff</fullName>
                </value>
                <value>
                    <fullName>Round Robin User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Userid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relate with user object</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Tier__c</columns>
        <columns>Type__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Baggage_Claim</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Email__c</columns>
        <columns>Tier__c</columns>
        <columns>Type__c</columns>
        <columns>Round_Robin_Status__c</columns>
        <columns>Last_Assigned_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Baggage Claim</value>
        </filters>
        <label>Baggage Claim</label>
    </listViews>
    <listViews>
        <fullName>First_Platinum</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Email__c</columns>
        <columns>Tier__c</columns>
        <columns>Type__c</columns>
        <columns>Round_Robin_Status__c</columns>
        <columns>Last_Assigned_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tier__c</field>
            <operation>equals</operation>
            <value>First / Platinum</value>
        </filters>
        <label>First &amp; Platinum</label>
    </listViews>
    <listViews>
        <fullName>Investigation_Staff</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Email__c</columns>
        <columns>Tier__c</columns>
        <columns>Type__c</columns>
        <columns>Responsible_Person__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Investigation Staff</value>
        </filters>
        <label>Investigation Staff</label>
    </listViews>
    <listViews>
        <fullName>Tier_1</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Email__c</columns>
        <columns>Tier__c</columns>
        <columns>Type__c</columns>
        <columns>Round_Robin_Status__c</columns>
        <columns>Case_Teamid__c</columns>
        <columns>Last_Assigned_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tier__c</field>
            <operation>equals</operation>
            <value>Tier 1</value>
        </filters>
        <label>Tier 1</label>
    </listViews>
    <listViews>
        <fullName>Tier_2</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Email__c</columns>
        <columns>Tier__c</columns>
        <columns>Type__c</columns>
        <columns>Round_Robin_Status__c</columns>
        <columns>Case_Teamid__c</columns>
        <columns>Last_Assigned_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tier__c</field>
            <operation>equals</operation>
            <value>Tier 2</value>
        </filters>
        <label>Tier 2</label>
    </listViews>
    <listViews>
        <fullName>Urgent</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Email__c</columns>
        <columns>Tier__c</columns>
        <columns>Type__c</columns>
        <columns>Round_Robin_Status__c</columns>
        <columns>Last_Assigned_Time__c</columns>
        <columns>Case_Teamid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tier__c</field>
            <operation>equals</operation>
            <value>Level 8 (In-Flight Urgent),Level 8 (Ground Service Urgent)</value>
        </filters>
        <label>Urgent</label>
    </listViews>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Members</pluralLabel>
    <recordTypes>
        <fullName>Investigation_Staff</fullName>
        <active>true</active>
        <label>Investigation Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>Round_Robin</fullName>
        <active>true</active>
        <label>Round Robin</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>